# wgpu-practice

./: Cargo.toml  README.md
mesh/: Cargo.toml
mesh/src/: main.rs
raymarching/: Cargo.toml
raymarching/src/: main.rs
raymarching/src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
sphere/: .gitignore  Cargo.toml  Makefile  README.md
sphere/src/: blur.rs  main.rs  mesh.rs
sphere/src/shaders/: bake.vert  bake.vert.spv  blend.frag  blend.frag.spv  blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  light.frag  light.frag.spv  light.vert  light.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
