[package]
name = "sphere"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
# wgpu = "0.6.0"
winit = "0.22.2"
bytemuck = "1.2.0"
futures = "0.3.5"
png = "0.16.7"
cgmath = "0.17.0"
glam = { version = "0.9.3", feature = ["mint"]}
log = "0.4.11"
